# tiny-dfr

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
etc/polkit-1/rules.d/: 49-tiny-dfr-power-profiles.rules
etc/systemd/system/: tiny-dfr.service
etc/systemd/system-sleep/: tiny-dfr-t2
etc/systemd/system/tiny-dfr.service.d/: network.conf
etc/udev/rules.d/: 99-touchbar-leds.rules  99-touchbar-tiny-dfr.rules
share/tiny-dfr/: config.macos-style.toml  config.three-layer.toml  config.toml  cycle-power-profile.sh
src/: backlight.rs  button.rs  config.rs  display.rs  input.rs  layer.rs  lib.rs  logging.rs  main.rs  notification_manager.rs  simulator.rs  slider.rs  sysinfo_manager.rs  t2_usb.rs  weather.rs
tests/: buttons.rs  layers.rs
tests/common/: mod.rs
