[package]
name = "tiny-dfr"
version = "0.3.7"
edition = "2021"
license = "MIT AND Apache-2.0"
description = "The most basic dynamic function row daemon possible"
homepage = "https://github.com/AsahiLinux/tiny-dfr"
repository = "https://github.com/AsahiLinux/tiny-dfr.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
cairo-rs = { version = "0.22", default-features = false, features = ["freetype", "png"] }
librsvg-rebind = "0.3"
drm = "0.14"
anyhow = "1"
input = "0.9"
libc = "0.2"
input-linux = { version = "0.7", features = ["serde"] }
input-linux-sys = "0.9"
nix = { version = "0.29", features = ["event", "signal", "inotify"] }
privdrop = "0.5.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rand = "0.8"
freetype-rs = "0.38"
freedesktop-icons = "0.4.0"
chrono = { version = "0.4", features = ["unstable-locales"] }
udev = "0.9"
sysinfo = "0.33"
hyprland = { version = "0.4.0-beta.3" }
serde_json = "1"
cosmic-client-toolkit = { git = "https://github.com/pop-os/cosmic-protocols", package = "cosmic-client-toolkit" }
wayland-backend = { version = "0.3.11", features = ["client_system"] }
minifb = { version = "0.27", optional = true }

[features]
# On-screen Touch Bar simulator: `cargo build --features simulator`,
# run with `tiny-dfr --simulate`.
simulator = ["dep:minifb"]

[build-dependencies]
pkg-config = "0.3"
